Cycles render issue. #62073

Closed
opened 2019-03-01 08:43:54 +01:00 by Mark Thornton-Dibb · 6 comments

Intel(R) Core(TM) i5-4670 CPU @ 3.40GHz. RAM 32.0 GB. 64-bit os, x64-based processor
Operating system: Windows 10 Pro, Version 1809. 07-Jan-19. Build 17763.316
Graphics card: NVIDEA GeForce GTX 760

Blender Version
Broken:
2.80 Beta. Date: 2019-02-20 20:10. Hash: 1af810b4ff
Worked:

Cycles renders a few frames then hangs. Restart render from next incremental frame and render runs for xx frames and then hangs. Frames rendered are sometimes 1 frame, then 15 frames, then 6 frames, i.e. not consistent.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file: coinTEXT6_Anim.blend

Intel(R) Core(TM) i5-4670 CPU @ 3.40GHz. RAM 32.0 GB. 64-bit os, x64-based processor Operating system: Windows 10 Pro, Version 1809. 07-Jan-19. Build 17763.316 Graphics card: NVIDEA GeForce GTX 760 **Blender Version** Broken: 2.80 Beta. Date: 2019-02-20 20:10. Hash: 1af810b4ff17 Worked: Cycles renders a few frames then hangs. Restart render from next incremental frame and render runs for xx frames and then hangs. Frames rendered are sometimes 1 frame, then 15 frames, then 6 frames, i.e. not consistent. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file: [coinTEXT6_Anim.blend](https://archive.blender.org/developer/F6734672/coinTEXT6_Anim.blend)

Added subscriber: @MarkThornton-Dibb

Added subscriber: @MarkThornton-Dibb

Intel(R) Core(TM) i5-4670 CPU @ 3.40GHz. RAM 32.0 GB. 64-bit os, x64-based processor
Operating system: Windows 10 Pro, Version 1809. 07-Jan-19. Build 17763.316
Graphics card: NVIDEA GeForce GTX 760

Blender Version
Broken:
2.80 Beta. Date: 2019-02-20 20:10. Hash: 1af810b4ff
Worked:

Cycles renders a few frames then hangs. Restart render from next incremental frame and render runs for xx frames and then hangs. Frames rendered are sometimes 1 frame, then 15 frames, then 6 frames, i.e. not consistent.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file: coinTEXT6_Anim.blend

Intel(R) Core(TM) i5-4670 CPU @ 3.40GHz. RAM 32.0 GB. 64-bit os, x64-based processor Operating system: Windows 10 Pro, Version 1809. 07-Jan-19. Build 17763.316 Graphics card: NVIDEA GeForce GTX 760 **Blender Version** Broken: 2.80 Beta. Date: 2019-02-20 20:10. Hash: 1af810b4ff17 Worked: Cycles renders a few frames then hangs. Restart render from next incremental frame and render runs for xx frames and then hangs. Frames rendered are sometimes 1 frame, then 15 frames, then 6 frames, i.e. not consistent. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file: [coinTEXT6_Anim.blend](https://archive.blender.org/developer/F6734672/coinTEXT6_Anim.blend)

Added subscriber: @brecht

Added subscriber: @brecht

Confirmed, there seems to be a deadlock:

Thread 198 (Thread 0x7ff5e97c0700 (LWP 36315)):
- 0  0x00007ff878363f85 in futex_abstimed_wait_cancelable (private=<optimized out>, abstime=0x7ff5e97bc690, expected=0, futex_word=0x55ce920c2dc4 <_PyRuntime+1252>) at ../sysdeps/unix/sysv/linux/futex-internal.h:205
- 1  0x00007ff878363f85 in __pthread_cond_wait_common (abstime=0x7ff5e97bc690, mutex=0x55ce920c2dc8 <_PyRuntime+1256>, cond=0x55ce920c2d98 <_PyRuntime+1208>) at pthread_cond_wait.c:539
- 2  0x00007ff878363f85 in __pthread_cond_timedwait (cond=cond@entry=0x55ce920c2d98 <_PyRuntime+1208>, mutex=mutex@entry=0x55ce920c2dc8 <_PyRuntime+1256>, abstime=abstime@entry=0x7ff5e97bc690) at pthread_cond_wait.c:667
- 3  0x000055ce8bcf77b9 in PyCOND_TIMEDWAIT (cond=<optimized out>, mut=<optimized out>, us=<optimized out>) at Python/condvar.h:90
- 4  0x000055ce8bcf77b9 in take_gil (tstate=tstate@entry=0x7ff5e5cebc80) at Python/ceval_gil.h:208
- 5  0x000055ce8bcf7e5f in PyEval_RestoreThread (tstate=tstate@entry=0x7ff5e5cebc80) at Python/ceval.c:271
- 6  0x000055ce8bd24c86 in PyGILState_Ensure () at Python/pystate.c:1066
- 7  0x000055ce8aa12dd5 in bpy_context_set (C=0x7ff87359e308, gilstate=0x7ff5e97bc7cc) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_interface.c:114
- 8  0x000055ce8aa1d43d in bpy_class_call (C=0x7ff87359e308, ptr=0x7ff5e97bc870, func=0x55ce919e6d40 <rna_RenderEngine_update_render_passes_func>, parms=0x7ff5e97bc890) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_rna.c:7779
- 9  0x000055ce8b02dfd7 in engine_update_render_passes (engine=0x7ff3c9005008, scene=<optimized out>, view_layer=<optimized out>) at /home/brecht/dev/worktree/source/blender/makesrna/intern/rna_render.c:270
- 10 0x000055ce8a9fa42d in RE_engine_update_render_passes (engine=engine@entry=0x7ff3c9005008, scene=0x7ff852f09c08, view_layer=0x7ff5e8dd9008, callback=callback@entry=0x55ce8aa04960 <render_result_register_pass_cb>) at /home/brecht/dev/worktree/source/blender/render/intern/source/external_engine.c:807
- 11 0x000055ce8aa04fb5 in render_result_create_all_passes (engine=engine@entry=0x7ff3c9005008, re=re@entry=0x7ff626097808, rl=rl@entry=0x7ff5e8dde0c8) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1073
- 12 0x000055ce8aa07439 in render_result_create_all_passes (rl=0x7ff5e8dde0c8, re=0x7ff626097808, engine=0x7ff3c9005008) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1069
- 13 0x000055ce8aa07439 in render_result_exr_file_read_sample (re=re@entry=0x7ff626097808, sample=sample@entry=0, engine=engine@entry=0x7ff3c9005008) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1154
- 14 0x000055ce8aa07574 in render_result_exr_file_end (re=re@entry=0x7ff626097808, engine=engine@entry=0x7ff3c9005008) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1114
- 15 0x000055ce8a9fa364 in RE_engine_render (re=re@entry=0x7ff626097808, do_all=do_all@entry=0) at /home/brecht/dev/worktree/source/blender/render/intern/source/external_engine.c:767
- 16 0x000055ce8a9fd683 in do_render_3d (re=re@entry=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1080
- 17 0x000055ce8a9fdde1 in do_render (re=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1157
- 18 0x000055ce8aa01118 in do_render_composite (re=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1363
- 19 0x000055ce8aa01118 in do_render_all_options (re=re@entry=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1630
- 20 0x000055ce8aa01b31 in RE_BlenderAnim (re=0x7ff626097808, bmain=0x7ff808b44f08, scene=0x7ff852f09c08, single_layer=0x0, camera_override=0x0, sfra=<optimized out>, efra=150, tfra=1) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:2484
- 21 0x000055ce8a956a49 in render_startjob (rjv=0x7ff5e8ea31c8, stop=<optimized out>, do_update=<optimized out>, progress=<optimized out>) at /home/brecht/dev/worktree/source/blender/editors/render/render_internal.c:612
- 22 0x000055ce8a65aedf in do_job_thread (job_v=0x7ff626f8f248) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_jobs.c:330
- 23 0x00007ff87835d6db in start_thread (arg=0x7ff5e97c0700) at pthread_create.c:463
#24 0x00007ff876e9588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7ff878764fc0 (LWP 35840)):
- 0  0x00007ff8783624cf in futex_abstimed_wait (private=<optimized out>, abstime=0x0, expected=3, futex_word=0x7ff626097898) at ../sysdeps/unix/sysv/linux/futex-internal.h:172
- 1  0x00007ff8783624cf in __pthread_rwlock_rdlock_full (abstime=0x0, rwlock=0x7ff626097890) at pthread_rwlock_common.c:446
- 2  0x00007ff8783624cf in __GI___pthread_rwlock_rdlock (rwlock=0x7ff626097890) at pthread_rwlock_rdlock.c:27
- 3  0x000055ce8b112135 in BLI_rw_mutex_lock (mutex=mutex@entry=0x7ff626097890, mode=mode@entry=1) at /home/brecht/dev/worktree/source/blender/blenlib/intern/threads.c:531
- 4  0x000055ce8a9fde8a in RE_AcquireResultRead (re=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:309
- 5  0x000055ce8ae13b9d in BKE_image_acquire_renderresult (scene=scene@entry=0x7ff852f09c08, ima=ima@entry=0x7ff62609a008) at /home/brecht/dev/worktree/source/blender/blenkernel/intern/image.c:3124
- 6  0x000055ce8a6ab96a in uiTemplateImageLayers (layout=0x7ff626fe4008, C=<optimized out>, ima=0x7ff62609a008, iuser=0x7ff80573f038) at /home/brecht/dev/worktree/source/blender/editors/space_image/image_buttons.c:1236
- 7  0x000055ce8af78982 in RNA_function_call (C=C@entry=0x7ff87359e308, reports=reports@entry=0x7ffe286dd4b0, ptr=ptr@entry=0x7ff806631fd0, func=func@entry=0x55ce91aa7840 <rna_UILayout_template_image_layers_func>, parms=parms@entry=0x7ffe286dd460)
    at /home/brecht/dev/worktree/source/blender/makesrna/intern/rna_access.c:6920
- 8  0x000055ce8aa1cb58 in pyrna_func_call (self=0x7ff806631fc0, args=0x7ff80667fc48, kw=0x0) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_rna.c:5818
- 9  0x000055ce8bc42663 in _PyObject_FastCallKeywords (callable=0x7ff806631fc0, stack=<optimized out>, nargs=<optimized out>, kwnames=0x0) at Objects/call.c:199
- 10 0x000055ce8a6436d8 in call_function (kwnames=0x0, oparg=<optimized out>, pp_stack=<synthetic pointer>) at Python/ceval.c:4589
- 11 0x000055ce8a6436d8 in _PyEval_EvalFrameDefault (f=<optimized out>, throwflag=<optimized out>) at Python/ceval.c:3086
- 12 0x000055ce8a63adbf in function_code_fastcall (co=co@entry=0x7ff806b175d0, args=<optimized out>, args@entry=0x7ff8066a9fe0, nargs=2, globals=globals@entry=0x7ff806b081b0) at Objects/call.c:283
- 13 0x000055ce8bc41fa7 in _PyFunction_FastCallDict (func=0x7ff806aaa0d0, args=0x7ff8066a9fe0, nargs=<optimized out>, kwargs=0x0) at Objects/call.c:322
- 14 0x000055ce8aa1d684 in bpy_class_call (C=<optimized out>, ptr=<optimized out>, func=0x55ce91aa1740 <rna_Header_draw_func>, parms=0x7ffe286ddab0) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_rna.c:7922
- 15 0x000055ce8b06b907 in header_draw (C=<optimized out>, hdr=0x7ffe286ddb60) at /home/brecht/dev/worktree/source/blender/makesrna/intern/rna_ui.c:617
- 16 0x000055ce8a96445d in ED_region_header_layout (C=C@entry=0x7ff87359e308, ar=ar@entry=0x7ff805a3cd88) at /home/brecht/dev/worktree/source/blender/editors/screen/area.c:2437
- 17 0x000055ce8a964de1 in ED_region_header (C=0x7ff87359e308, ar=0x7ff805a3cd88) at /home/brecht/dev/worktree/source/blender/editors/screen/area.c:2498
- 18 0x000055ce8a967be9 in ED_region_do_draw (C=C@entry=0x7ff87359e308, ar=ar@entry=0x7ff805a3cd88) at /home/brecht/dev/worktree/source/blender/editors/screen/area.c:508
- 19 0x000055ce8a64b5db in wm_draw_window_offscreen (stereo=false, win=0x7ff625d11788, C=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_draw.c:573
- 20 0x000055ce8a64b5db in wm_draw_window (win=0x7ff625d11788, C=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_draw.c:705
- 21 0x000055ce8a64b5db in wm_draw_update (C=C@entry=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_draw.c:859
- 22 0x000055ce8a6496f0 in WM_main (C=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm.c:424
- 23 0x000055ce8a5b4bcf in main (argc=2, argv=0x7ffe286ddf08) at /home/brecht/dev/worktree/source/creator/creator.c:505
Confirmed, there seems to be a deadlock: ``` Thread 198 (Thread 0x7ff5e97c0700 (LWP 36315)): - 0 0x00007ff878363f85 in futex_abstimed_wait_cancelable (private=<optimized out>, abstime=0x7ff5e97bc690, expected=0, futex_word=0x55ce920c2dc4 <_PyRuntime+1252>) at ../sysdeps/unix/sysv/linux/futex-internal.h:205 - 1 0x00007ff878363f85 in __pthread_cond_wait_common (abstime=0x7ff5e97bc690, mutex=0x55ce920c2dc8 <_PyRuntime+1256>, cond=0x55ce920c2d98 <_PyRuntime+1208>) at pthread_cond_wait.c:539 - 2 0x00007ff878363f85 in __pthread_cond_timedwait (cond=cond@entry=0x55ce920c2d98 <_PyRuntime+1208>, mutex=mutex@entry=0x55ce920c2dc8 <_PyRuntime+1256>, abstime=abstime@entry=0x7ff5e97bc690) at pthread_cond_wait.c:667 - 3 0x000055ce8bcf77b9 in PyCOND_TIMEDWAIT (cond=<optimized out>, mut=<optimized out>, us=<optimized out>) at Python/condvar.h:90 - 4 0x000055ce8bcf77b9 in take_gil (tstate=tstate@entry=0x7ff5e5cebc80) at Python/ceval_gil.h:208 - 5 0x000055ce8bcf7e5f in PyEval_RestoreThread (tstate=tstate@entry=0x7ff5e5cebc80) at Python/ceval.c:271 - 6 0x000055ce8bd24c86 in PyGILState_Ensure () at Python/pystate.c:1066 - 7 0x000055ce8aa12dd5 in bpy_context_set (C=0x7ff87359e308, gilstate=0x7ff5e97bc7cc) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_interface.c:114 - 8 0x000055ce8aa1d43d in bpy_class_call (C=0x7ff87359e308, ptr=0x7ff5e97bc870, func=0x55ce919e6d40 <rna_RenderEngine_update_render_passes_func>, parms=0x7ff5e97bc890) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_rna.c:7779 - 9 0x000055ce8b02dfd7 in engine_update_render_passes (engine=0x7ff3c9005008, scene=<optimized out>, view_layer=<optimized out>) at /home/brecht/dev/worktree/source/blender/makesrna/intern/rna_render.c:270 - 10 0x000055ce8a9fa42d in RE_engine_update_render_passes (engine=engine@entry=0x7ff3c9005008, scene=0x7ff852f09c08, view_layer=0x7ff5e8dd9008, callback=callback@entry=0x55ce8aa04960 <render_result_register_pass_cb>) at /home/brecht/dev/worktree/source/blender/render/intern/source/external_engine.c:807 - 11 0x000055ce8aa04fb5 in render_result_create_all_passes (engine=engine@entry=0x7ff3c9005008, re=re@entry=0x7ff626097808, rl=rl@entry=0x7ff5e8dde0c8) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1073 - 12 0x000055ce8aa07439 in render_result_create_all_passes (rl=0x7ff5e8dde0c8, re=0x7ff626097808, engine=0x7ff3c9005008) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1069 - 13 0x000055ce8aa07439 in render_result_exr_file_read_sample (re=re@entry=0x7ff626097808, sample=sample@entry=0, engine=engine@entry=0x7ff3c9005008) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1154 - 14 0x000055ce8aa07574 in render_result_exr_file_end (re=re@entry=0x7ff626097808, engine=engine@entry=0x7ff3c9005008) at /home/brecht/dev/worktree/source/blender/render/intern/source/render_result.c:1114 - 15 0x000055ce8a9fa364 in RE_engine_render (re=re@entry=0x7ff626097808, do_all=do_all@entry=0) at /home/brecht/dev/worktree/source/blender/render/intern/source/external_engine.c:767 - 16 0x000055ce8a9fd683 in do_render_3d (re=re@entry=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1080 - 17 0x000055ce8a9fdde1 in do_render (re=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1157 - 18 0x000055ce8aa01118 in do_render_composite (re=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1363 - 19 0x000055ce8aa01118 in do_render_all_options (re=re@entry=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:1630 - 20 0x000055ce8aa01b31 in RE_BlenderAnim (re=0x7ff626097808, bmain=0x7ff808b44f08, scene=0x7ff852f09c08, single_layer=0x0, camera_override=0x0, sfra=<optimized out>, efra=150, tfra=1) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:2484 - 21 0x000055ce8a956a49 in render_startjob (rjv=0x7ff5e8ea31c8, stop=<optimized out>, do_update=<optimized out>, progress=<optimized out>) at /home/brecht/dev/worktree/source/blender/editors/render/render_internal.c:612 - 22 0x000055ce8a65aedf in do_job_thread (job_v=0x7ff626f8f248) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_jobs.c:330 - 23 0x00007ff87835d6db in start_thread (arg=0x7ff5e97c0700) at pthread_create.c:463 #24 0x00007ff876e9588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95 Thread 1 (Thread 0x7ff878764fc0 (LWP 35840)): - 0 0x00007ff8783624cf in futex_abstimed_wait (private=<optimized out>, abstime=0x0, expected=3, futex_word=0x7ff626097898) at ../sysdeps/unix/sysv/linux/futex-internal.h:172 - 1 0x00007ff8783624cf in __pthread_rwlock_rdlock_full (abstime=0x0, rwlock=0x7ff626097890) at pthread_rwlock_common.c:446 - 2 0x00007ff8783624cf in __GI___pthread_rwlock_rdlock (rwlock=0x7ff626097890) at pthread_rwlock_rdlock.c:27 - 3 0x000055ce8b112135 in BLI_rw_mutex_lock (mutex=mutex@entry=0x7ff626097890, mode=mode@entry=1) at /home/brecht/dev/worktree/source/blender/blenlib/intern/threads.c:531 - 4 0x000055ce8a9fde8a in RE_AcquireResultRead (re=0x7ff626097808) at /home/brecht/dev/worktree/source/blender/render/intern/source/pipeline.c:309 - 5 0x000055ce8ae13b9d in BKE_image_acquire_renderresult (scene=scene@entry=0x7ff852f09c08, ima=ima@entry=0x7ff62609a008) at /home/brecht/dev/worktree/source/blender/blenkernel/intern/image.c:3124 - 6 0x000055ce8a6ab96a in uiTemplateImageLayers (layout=0x7ff626fe4008, C=<optimized out>, ima=0x7ff62609a008, iuser=0x7ff80573f038) at /home/brecht/dev/worktree/source/blender/editors/space_image/image_buttons.c:1236 - 7 0x000055ce8af78982 in RNA_function_call (C=C@entry=0x7ff87359e308, reports=reports@entry=0x7ffe286dd4b0, ptr=ptr@entry=0x7ff806631fd0, func=func@entry=0x55ce91aa7840 <rna_UILayout_template_image_layers_func>, parms=parms@entry=0x7ffe286dd460) at /home/brecht/dev/worktree/source/blender/makesrna/intern/rna_access.c:6920 - 8 0x000055ce8aa1cb58 in pyrna_func_call (self=0x7ff806631fc0, args=0x7ff80667fc48, kw=0x0) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_rna.c:5818 - 9 0x000055ce8bc42663 in _PyObject_FastCallKeywords (callable=0x7ff806631fc0, stack=<optimized out>, nargs=<optimized out>, kwnames=0x0) at Objects/call.c:199 - 10 0x000055ce8a6436d8 in call_function (kwnames=0x0, oparg=<optimized out>, pp_stack=<synthetic pointer>) at Python/ceval.c:4589 - 11 0x000055ce8a6436d8 in _PyEval_EvalFrameDefault (f=<optimized out>, throwflag=<optimized out>) at Python/ceval.c:3086 - 12 0x000055ce8a63adbf in function_code_fastcall (co=co@entry=0x7ff806b175d0, args=<optimized out>, args@entry=0x7ff8066a9fe0, nargs=2, globals=globals@entry=0x7ff806b081b0) at Objects/call.c:283 - 13 0x000055ce8bc41fa7 in _PyFunction_FastCallDict (func=0x7ff806aaa0d0, args=0x7ff8066a9fe0, nargs=<optimized out>, kwargs=0x0) at Objects/call.c:322 - 14 0x000055ce8aa1d684 in bpy_class_call (C=<optimized out>, ptr=<optimized out>, func=0x55ce91aa1740 <rna_Header_draw_func>, parms=0x7ffe286ddab0) at /home/brecht/dev/worktree/source/blender/python/intern/bpy_rna.c:7922 - 15 0x000055ce8b06b907 in header_draw (C=<optimized out>, hdr=0x7ffe286ddb60) at /home/brecht/dev/worktree/source/blender/makesrna/intern/rna_ui.c:617 - 16 0x000055ce8a96445d in ED_region_header_layout (C=C@entry=0x7ff87359e308, ar=ar@entry=0x7ff805a3cd88) at /home/brecht/dev/worktree/source/blender/editors/screen/area.c:2437 - 17 0x000055ce8a964de1 in ED_region_header (C=0x7ff87359e308, ar=0x7ff805a3cd88) at /home/brecht/dev/worktree/source/blender/editors/screen/area.c:2498 - 18 0x000055ce8a967be9 in ED_region_do_draw (C=C@entry=0x7ff87359e308, ar=ar@entry=0x7ff805a3cd88) at /home/brecht/dev/worktree/source/blender/editors/screen/area.c:508 - 19 0x000055ce8a64b5db in wm_draw_window_offscreen (stereo=false, win=0x7ff625d11788, C=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_draw.c:573 - 20 0x000055ce8a64b5db in wm_draw_window (win=0x7ff625d11788, C=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_draw.c:705 - 21 0x000055ce8a64b5db in wm_draw_update (C=C@entry=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_draw.c:859 - 22 0x000055ce8a6496f0 in WM_main (C=0x7ff87359e308) at /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm.c:424 - 23 0x000055ce8a5b4bcf in main (argc=2, argv=0x7ffe286ddf08) at /home/brecht/dev/worktree/source/creator/creator.c:505 ```

This issue was referenced by 4c3be0bf52

This issue was referenced by 4c3be0bf52292add5cdf23be5f4affb76f1b747d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62073
No description provided.