Fix T62073: Cycles random hangs rendering with Save Buffers on.